@@ -1,3 +1,8 @@
+2001-04-30  Michael Snyder  <msnyder@redhat.com>
+
+	* thread-db.c: Revert 2001-04-26 change for debugging output.
+	* lin-lwp.c:   Ditto.
+
 2001-04-27  Andrew Cagney  <ac131313@redhat.com>
 
 	* gdbtypes.c (check_stub_method): Always initialize ``p''.
